--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.1"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^3.4.17"
   }
 }
