--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "postcss-nesting": "^13.0.1",
+    "sitemap": "^8.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
