Add sitemap generation step to build process
Updated the build script to include a sitemap generation step by running `generate-sitemap.js` before the primary build process. This ensures a sitemap is created and integrated during every build.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build:sitemap": "node generate-sitemap.js",
+    "build": "npm run build:sitemap && react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
